# Periodic-Table-Molecular-Formula

./: COMMENTAIRES  COMMENTAREN  COMMENTI  COMMENTS  GTKPeriodicTable.sh  KOMMENTARE  Makefile.am  README.md  configure.ac  linguas.sh  periodictable  periodictable.desktop  periodictable.sh.in
16x16/: Makefile  Makefile.am  Makefile.in
package/: periodictable.spec
po/: LINGUAS  POTFILES.in  de.po  fr.po  it.po  nl.po  periodictable.pot
src/: Makefile.am  Makefile.in  elementproperty.cpp  elementproperty.h  elementschema.cpp  elementschema.h  formulaparser.cpp  formulaparser.h  legend_svg.template  main.cpp  molecularformula.cpp  molecularformula.h  periodictablewindow.cpp  periodictablewindow.h  printformoperation.cpp  printformoperation.h
