SUBDIRS = src po 16x16

ACLOCAL_AMFLAGS = -I m4

bin_SCRIPTS = periodictable

UPPERCASE_FILES = COMMENTAREN COMMENTI COMMENTS KOMMENTARE LICENSE README.md

uppercasedir = $(datadir)/$(PACKAGE)
uppercase_DATA = $(UPPERCASE_FILES)

EXTRA_DIST = 16x16 autogen.sh GTKPeriodicTable.sh periodictable $(UPPERCASE_FILES)

